@@ -4,7 +4,8 @@ import org.junit.jupiter.api.Test;
 
 import java.util.List;
 
-import static org.junit.jupiter.api.Assertions.*;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNull;
 
 class CteDefTest {
 
@@ -12,8 +13,17 @@ class CteDefTest {
     void of() {
         var cte = CteDef.of("name", Query.select(Expression.literal(1)), List.of("c1"));
         assertEquals("name", cte.name());
-        assertEquals(1, cte.body().asSelect().orElseThrow().select().get(0).asExpr().orElseThrow().expr().asLiteral().orElseThrow().value());
-        assertEquals("c1", cte.columnAliases().get(0));
+        assertEquals(1, cte.body().matchQuery()
+            .select(s -> s.items().getFirst().matchSelectItem()
+                .expr(e -> e.expr().matchExpression()
+                    .literal(l -> l.value())
+                    .orElse(null)
+                )
+                .orElse(null)
+            )
+            .orElse(null)
+        );
+        assertEquals("c1", cte.columnAliases().getFirst());
     }
 
     @Test
@@ -21,7 +31,16 @@ class CteDefTest {
         var body = Query.select(Expression.literal(1));
         var cte = CteDef.of("name").body(body);
         assertEquals("name", cte.name());
-        assertEquals(1, cte.body().asSelect().orElseThrow().select().get(0).asExpr().orElseThrow().expr().asLiteral().orElseThrow().value());
+        assertEquals(1, cte.body().matchQuery()
+            .select(s -> s.items().getFirst().matchSelectItem()
+                .expr(e -> e.expr().matchExpression()
+                    .literal(l -> l.value())
+                    .orElse(null)
+                )
+                .orElse(null)
+            )
+            .orElse(null)
+        );
         assertNull(cte.columnAliases());
     }
 
@@ -31,10 +50,10 @@ class CteDefTest {
         var cte = CteDef.of("name").columnAliases(aliases);
         assertEquals("name", cte.name());
         assertNull(cte.body());
-        assertEquals("c1", cte.columnAliases().get(0));
+        assertEquals("c1", cte.columnAliases().getFirst());
         cte = CteDef.of("name").columnAliases("c2");
         assertEquals("name", cte.name());
         assertNull(cte.body());
-        assertEquals("c2", cte.columnAliases().get(0));
+        assertEquals("c2", cte.columnAliases().getFirst());
     }
 }
