@@ -11,8 +11,10 @@ public class JoinContractsTest {
     void on_join() {
         var p = ComparisonPredicate.of(Expression.column("t", "c"), ComparisonOperator.EQ, Expression.literal(1));
         var j = OnJoin.of(TableRef.table("t"), JoinKind.INNER, p);
-
-        assertEquals("t", j.right().asTable().map(Table::name).orElseThrow());
+        var name = j.right().matchTableRef()
+                    .table(t -> t.name())
+                    .orElse(null);
+        assertEquals("t", name);
         assertEquals(JoinKind.INNER, j.kind());
         assertInstanceOf(ComparisonPredicate.class, j.on());
     }
@@ -20,22 +22,28 @@ public class JoinContractsTest {
     @Test
     void cross_join() {
         var j = CrossJoin.of("t");
-
-        assertEquals("t", j.right().asTable().map(Table::name).orElseThrow());
+        var name = j.right().matchTableRef()
+                    .table(t -> t.name())
+                    .orElse(null);
+        assertEquals("t", name);
     }
 
     @Test
     void natural_join() {
         var j = NaturalJoin.of("t");
-
-        assertEquals("t", j.right().asTable().map(Table::name).orElseThrow());
+        var name = j.right().matchTableRef()
+                    .table(t -> t.name())
+                    .orElse(null);
+        assertEquals("t", name);
     }
 
     @Test
     void using_join() {
         var j = UsingJoin.of(TableRef.table("t"), "c1");
-
-        assertEquals("t", j.right().asTable().map(Table::name).orElseThrow());
-        assertEquals("c1", j.usingColumns().get(0));
+        var name = j.right().matchTableRef()
+                    .table(t -> t.name())
+                    .orElse(null);
+        assertEquals("t", name);
+        assertEquals("c1", j.usingColumns().getFirst());
     }
 }
