@@ -14,13 +14,15 @@ public class PredicateContractsTest {
             Query.select(Expression.literal(1)),
             Quantifier.ALL);
 
-        assertEquals("c1", p.lhs()
-            .asColumn().map(ColumnExpr::name).orElseThrow());
+        assertEquals("c1", p.lhs().matchExpression().column(c -> c.name()).orElse(null));
         assertEquals(ComparisonOperator.GT, p.operator());
-        assertEquals(1, p.subquery()
-            .asSelect().map(SelectQuery::select).orElseThrow().get(0)
-            .asExpr().map(ExprSelectItem::expr).orElseThrow()
-            .asLiteral().map(LiteralExpr::value).orElseThrow());
+        assertEquals(1, (Integer) p.subquery().matchQuery()
+            .select(s -> s.items().getFirst().matchSelectItem()
+                .expr(e -> e.expr().matchExpression()
+                    .literal(l -> l.value())
+                    .orElse(null))
+                .orElse(null))
+            .orElse(null));
     }
 
     @Test
@@ -31,24 +33,18 @@ public class PredicateContractsTest {
             Expression.literal(10),
             false);
 
-        assertEquals("c", p.value()
-            .asColumn().map(ColumnExpr::name).orElseThrow());
-        assertEquals(1, p.lower()
-            .asLiteral().map(LiteralExpr::value).orElseThrow());
-        assertEquals(10, p.upper()
-            .asLiteral().map(LiteralExpr::value).orElseThrow());
+        assertEquals("c", p.value().matchExpression().column(l -> l.name()).orElse(null));
+        assertEquals(1, p.lower().matchExpression().literal(l -> l.value()).orElse(null));
+        assertEquals(10, p.upper().matchExpression().literal(l -> l.value()).orElse(null));
         assertFalse(p.symmetric());
     }
 
     @Test
     void comparison_predicate() {
         var p = ComparisonPredicate.of(Expression.column("c"), ComparisonOperator.EQ, Expression.literal(1));
-
-        assertEquals("c", p.lhs()
-            .asColumn().map(ColumnExpr::name).orElseThrow());
+        assertEquals("c", p.lhs().matchExpression().column(l -> l.name()).orElse(null));
         assertEquals(ComparisonOperator.EQ, p.operator());
-        assertEquals(1, p.rhs()
-            .asLiteral().map(LiteralExpr::value).orElseThrow());
+        assertEquals(1, p.rhs().matchExpression().literal(l -> l.value()).orElse(null));
     }
 
     @Test
@@ -60,22 +56,36 @@ public class PredicateContractsTest {
 
         assertInstanceOf(ComparisonPredicate.class, p.lhs());
         assertInstanceOf(ComparisonPredicate.class, p.rhs());
-        assertEquals("c1", p.lhs()
-            .asComparison().map(ComparisonPredicate::lhs).orElseThrow()
-            .asColumn().map(ColumnExpr::name).orElseThrow());
-        assertEquals(ComparisonOperator.EQ, p.lhs()
-            .asComparison().map(ComparisonPredicate::operator).orElseThrow());
-        assertEquals(1, p.lhs()
-            .asComparison().map(ComparisonPredicate::rhs).orElseThrow()
-            .asLiteral().map(LiteralExpr::value).orElseThrow());
-        assertEquals("c2", p.rhs()
-            .asComparison().map(ComparisonPredicate::lhs).orElseThrow()
-            .asColumn().map(ColumnExpr::name).orElseThrow());
-        assertEquals(ComparisonOperator.GT, p.rhs()
-            .asComparison().map(ComparisonPredicate::operator).orElseThrow());
-        assertEquals(2, p.rhs()
-            .asComparison().map(ComparisonPredicate::rhs).orElseThrow()
-            .asLiteral().map(LiteralExpr::value).orElseThrow());
+        assertEquals("c1", p.lhs().matchPredicate()
+            .comparison(c -> c.lhs().matchExpression()
+                .column(l -> l.name())
+                .orElse(null)
+            )
+            .orElse(null));
+        assertEquals(ComparisonOperator.EQ, p.lhs().matchPredicate()
+            .comparison(c -> c.operator())
+            .orElse(null));
+        assertEquals(1, p.lhs().matchPredicate()
+            .comparison(c -> c.rhs().matchExpression()
+                .literal(l -> l.value())
+                .orElse(null)
+            )
+            .orElse(null));
+        assertEquals("c2", p.rhs().matchPredicate()
+            .comparison(c -> c.lhs().matchExpression()
+                .column(l -> l.name())
+                .orElse(null)
+            )
+            .orElse(null));
+        assertEquals(ComparisonOperator.GT, p.rhs().matchPredicate()
+            .comparison(c -> c.operator())
+            .orElse(null));
+        assertEquals(2, p.rhs().matchPredicate()
+            .comparison(c -> c.rhs().matchExpression()
+                .literal(l -> l.value())
+                .orElse(null)
+            )
+            .orElse(null));
     }
 
     @Test
@@ -87,32 +97,51 @@ public class PredicateContractsTest {
 
         assertInstanceOf(ComparisonPredicate.class, p.lhs());
         assertInstanceOf(ComparisonPredicate.class, p.rhs());
-        assertEquals("c1", p.lhs()
-            .asComparison().map(ComparisonPredicate::lhs).orElseThrow()
-            .asColumn().map(ColumnExpr::name).orElseThrow());
-        assertEquals(ComparisonOperator.EQ, p.lhs()
-            .asComparison().map(ComparisonPredicate::operator).orElseThrow());
-        assertEquals(1, p.lhs()
-            .asComparison().map(ComparisonPredicate::rhs).orElseThrow()
-            .asLiteral().map(LiteralExpr::value).orElseThrow());
-        assertEquals("c2", p.rhs()
-            .asComparison().map(ComparisonPredicate::lhs).orElseThrow()
-            .asColumn().map(ColumnExpr::name).orElseThrow());
-        assertEquals(ComparisonOperator.GT, p.rhs()
-            .asComparison().map(ComparisonPredicate::operator).orElseThrow());
-        assertEquals(2, p.rhs()
-            .asComparison().map(ComparisonPredicate::rhs).orElseThrow()
-            .asLiteral().map(LiteralExpr::value).orElseThrow());
+        assertEquals("c1", p.lhs().matchPredicate()
+            .comparison(c -> c.lhs().matchExpression()
+                .column(l -> l.name())
+                .orElse(null)
+            )
+            .orElse(null));
+        assertEquals(ComparisonOperator.EQ, p.lhs().matchPredicate()
+            .comparison(c -> c.operator())
+            .orElse(null));
+        assertEquals(1, p.lhs().matchPredicate()
+            .comparison(c -> c.rhs().matchExpression()
+                .literal(l -> l.value())
+                .orElse(null)
+            )
+            .orElse(null));
+        assertEquals("c2", p.rhs().matchPredicate()
+            .comparison(c -> c.lhs().matchExpression()
+                .column(l -> l.name())
+                .orElse(null)
+            )
+            .orElse(null));
+        assertEquals(ComparisonOperator.GT, p.rhs().matchPredicate()
+            .comparison(c -> c.operator())
+            .orElse(null));
+        assertEquals(2, p.rhs().matchPredicate()
+            .comparison(c -> c.rhs().matchExpression()
+                .literal(l -> l.value())
+                .orElse(null)
+            )
+            .orElse(null));
     }
 
     @Test
     void exists_predicate() {
         var p = ExistsPredicate.of(Query.select(Expression.literal(1)), false);
 
-        assertEquals(1, p.subquery()
-            .asSelect().map(SelectQuery::select).orElseThrow().get(0)
-            .asExpr().map(ExprSelectItem::expr).orElseThrow()
-            .asLiteral().map(LiteralExpr::value).orElseThrow());
+        assertEquals(1, (Integer) p.subquery().matchQuery()
+            .select(s -> s.items().getFirst().matchSelectItem()
+                .expr(e -> e.expr().matchExpression()
+                    .literal(l -> l.value())
+                    .orElse(null)
+                )
+                .orElse(null)
+            )
+            .orElse(null));
         assertFalse(p.negated());
     }
 
@@ -120,12 +149,14 @@ public class PredicateContractsTest {
     void in_predicate() {
         var p = InPredicate.of(Expression.column("c"), Expression.row(1), true);
 
-        assertEquals("c", p.lhs().asColumn().map(ColumnExpr::name).orElseThrow());
-        assertEquals(1, p.rhs()
-            .asRow().map(RowExpr::items).orElseThrow().size());
-        assertEquals(1, p.rhs()
-            .asRow().map(RowExpr::items).orElseThrow().get(0)
-            .asLiteral().map(LiteralExpr::value).orElseThrow());
+        assertEquals("c", p.lhs().matchExpression().column(l -> l.name()).orElse(null));
+        assertEquals(1, p.rhs().matchValueSet().row(r -> r.items().size()).orElse(0));
+        assertEquals(1, p.rhs().matchValueSet()
+            .row(r -> r.items().getFirst().matchExpression()
+                .literal(l -> l.value())
+                .orElse(null)
+            )
+            .orElse(null));
         assertTrue(p.negated());
     }
 
@@ -133,7 +164,7 @@ public class PredicateContractsTest {
     void is_null_predicate() {
         var p = IsNullPredicate.of(Expression.column("c"), true);
 
-        assertEquals("c", p.expr().asColumn().map(ColumnExpr::name).orElseThrow());
+        assertEquals("c", p.expr().matchExpression().column(l -> l.name()).orElse(null));
         assertTrue(p.negated());
     }
 
@@ -141,9 +172,9 @@ public class PredicateContractsTest {
     void like_predicate() {
         var p = LikePredicate.of(Expression.column("c"), Expression.literal("%c%"), Expression.literal("\\"), true);
 
-        assertEquals("c", p.value().asColumn().map(ColumnExpr::name).orElseThrow());
-        assertEquals("%c%", p.pattern().asLiteral().map(LiteralExpr::value).orElseThrow());
-        assertEquals("\\", p.escape().asLiteral().map(LiteralExpr::value).orElseThrow());
+        assertEquals("c", p.value().matchExpression().column(l -> l.name()).orElse(null));
+        assertEquals("%c%", p.pattern().matchExpression().literal(l -> l.value()).orElse(null));
+        assertEquals("\\", p.escape().matchExpression().literal(l -> l.value()).orElse(null));
         assertTrue(p.negated());
     }
 
@@ -152,20 +183,27 @@ public class PredicateContractsTest {
         var p = NotPredicate.of(ComparisonPredicate.of(Expression.column("c1"), ComparisonOperator.EQ, Expression.literal(1)));
 
         assertInstanceOf(ComparisonPredicate.class, p.inner());
-        assertEquals("c1", p.inner()
-            .asComparison().map(ComparisonPredicate::lhs).orElseThrow()
-            .asColumn().map(ColumnExpr::name).orElseThrow());
-        assertEquals(ComparisonOperator.EQ, p.inner()
-            .asComparison().map(ComparisonPredicate::operator).orElseThrow());
-        assertEquals(1, p.inner()
-            .asComparison().map(ComparisonPredicate::rhs).orElseThrow()
-            .asLiteral().map(LiteralExpr::value).orElseThrow());
+        assertEquals("c1", p.inner().matchPredicate()
+            .comparison(c -> c.lhs().matchExpression()
+                .column(col -> col.name())
+                .orElse(null)
+            )
+            .orElse(null));
+        assertEquals(ComparisonOperator.EQ, p.inner().matchPredicate()
+            .comparison(c -> c.operator())
+            .orElse(null));
+        assertEquals(1, p.inner().matchPredicate()
+            .comparison(c -> c.rhs().matchExpression()
+                .literal(l -> l.value())
+                .orElse(null)
+            )
+            .orElse(null));
     }
 
     @Test
     void unary_predicate() {
         var p = UnaryPredicate.of(Expression.literal(true));
 
-        assertTrue((boolean)p.expr().asLiteral().map(LiteralExpr::value).orElseThrow());
+        assertTrue((boolean) p.expr().matchExpression().literal(l -> l.value()).orElse(null));
     }
 }
